# parkit

./: .gitignore  Cargo.toml  README.md  moon.mod.json  moon.work.json
.github/workflows/: ci.yml  copilot-setup-steps.yml  publish.yml
examples/: moon.mod.json
examples/benchmark/: bench.mbt  moon.pkg.json
examples/json/: json.mbt
reference/nom-json/: Cargo.toml
reference/nom-json/benches/: json_bench.rs
reference/nom-json/src/: lib.rs
src/benchmark/: bench.mbt  moon.pkg.json
src/json/: json.mbt  json_test.mbt  moon.pkg.json
src/lib/: parsec.mbt
src/nom/: parsec.mbt  parsec_test.mbt
